--- a/Settings.css
+++ b/Settings.css
@@ -1,12 +1,12 @@
+.settingsWrap {
+	z-index: 100;
+}
 .settingsContainer {
-	position: absolute;
-	left: 0;
-	top: 0;
-	/* width: 100%;
-	height: 100%; */
+	width: 200px;
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
+
 .settingsTabButtonContainer {
 	background-color: var(--innerMenuBgColor);
 	width: 100%;
@@ -56,8 +56,6 @@
 .settingContainer {
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
-	padding-left: 1em;
-	padding-right: 1em;
 	width: 100%;
 	box-sizing: border-box;
 	background-color: var(--innerMenuBgColor);
