--- a/interface.css
+++ b/interface.css
@@ -2,6 +2,10 @@
 	--buttonColor1: #0c5b8371;
 	--buttonColor2: white;
 	--buttonColor3: #90a4ae8f;
+	--inputColor1: rgb(7, 58, 18);
+	--inputColor2: rgb(56, 6, 6);
+	--inputColor3: rgba(175, 119, 35, 0);
+	--inputColor4: rgb(13, 24, 128);
 }
 
 html,
@@ -17,89 +21,21 @@ body {
 h2 {
 	padding-bottom: 2em;
 }
+
+.mainWrap {
+	width: 100%;
+	height: 100%;
+}
 .buttonPreviewWrap {
 	position: relative;
-	width: 20%;
-	height: 20%;
+	width: 100%;
+	z-index: 1;
+	display: flex;
+	justify-content: center;
 }
-.button {
-	opacity: 0.8;
-	color: rgb(255, 255, 255);
-	padding: 0em;
-	/* padding-top: 35px; */
-	position: absolute;
-	top: 200px;
-	left: 200px;
-	width: 90px;
-	height: 90px;
-	background-color: unset;
-	background: var(--buttonColor1);
-	pointer-events: none;
-	border-radius: 50%;
-	border-width: 0px;
-	box-sizing: border-box;
-	transition: 0.3s ease-in-out all;
-	box-shadow: 0px 0px 0px 5px var(--buttonColor2),
-		0px 0px 0px 9px var(--buttonColor1),
-		inset 0px 0px 0px 0px var(--buttonColor2);
-}
-.buttonEffect:hover:not(:active) ~ .button {
-	transition: 0.1s ease-in-out all;
-	/* background-color: var(--buttonColor2); */
-	/* transform: translate(-50%, -50%) scale(0.8, 0.8); */
-	/* box-shadow: inset 0px 0px 3px 4px black; */
-	box-shadow: 0px 0px 0px 8px var(--buttonColor2),
-		0px 0px 0px 14px var(--buttonColor1),
-		inset 0px 0px 0px 0px var(--buttonColor2);
-}
-.buttonEffect {
-	background: none;
-	pointer-events: all;
-	cursor: pointer;
-	box-shadow: none;
-}
-.buttonEffect::after {
-	position: absolute;
-	content: "";
-	left: -105px;
-	top: -105px;
-	min-width: 300px;
-	min-height: 300px;
-	pointer-events: none;
-	/* transition: none; */
-	transition: background-size ease-in-out 0.5s,
-		background-position ease-in-out 0.5s;
-	background-repeat: no-repeat;
-	/* filter: blur(4px); */
-	/* z-index: -1; */
-}
-
-.buttonEffect:active ~ .button {
-	transition: 0.1s ease-in-out all;
-	box-shadow: 0px 0px 0px 0px var(--buttonColor2),
-		0px 0px 0px 7px var(--buttonColor1),
-		inset 0px 0px 0px 5px var(--buttonColor2);
-	/* transform: translate(-50%, -50%s); */
-	/* transform: translate(-50%, -50%) scale(0.8, 0.8) !important; */
-	/* transition: 0; */
-	/* transform: scale(0.95); */
-}
-.buttonEffect:active::after {
-	/* z-index: -1; */
-	animation: none;
-	background-size: 0;
-}
-
-@keyframes buttonShrink {
-	0% {
-		transform: translate(-50%, -50%) !important;
-	}
-	100% {
-		transform: translate(-50%, -50%) scale(0.8, 0.8) !important;
-	}
-}
-
-.settingWrap {
-	width: 20%;
+.buttonWrap {
+	z-index: 1;
 	position: relative;
+	width: 200px;
+	height: 200px;
 }
