--- a/button.css
+++ b/button.css
@@ -1,29 +1,32 @@
+:root {
+	--buttonColor0: #0c5b8371;
+	--buttonColor1: #0c5b8371;
+	--buttonColor2: white;
+	--buttonColor3: #90a4ae8f;
+	--buttonFontColor: white;
+}
 .button {
-	/* opacity: 0.8; */
 	z-index: 1;
-	color: rgb(255, 255, 255);
+	color: var(--buttonFontColor);
 	padding: 0em;
-	/* padding-top: 35px; */
 	position: absolute;
-
 	width: 90px;
 	height: 90px;
+	left: 50%;
+	top: 50%;
 	background-color: unset;
-	background: var(--buttonColor1);
+	background: var(--buttonColor0);
 	pointer-events: none;
 	border-radius: 50%;
 	border-width: 0px;
 	box-sizing: border-box;
-	transition: 0.3s ease-in-out all;
+	transition: box-shadow ease-out 0.3s;
 	box-shadow: 0px 0px 0px 5px var(--buttonColor2),
 		0px 0px 0px 9px var(--buttonColor1),
 		inset 0px 0px 0px 0px var(--buttonColor2);
 }
 .buttonEffect:hover:not(:active) ~ .button {
 	transition: 0.1s ease-in-out all;
-	/* background-color: var(--buttonColor2); */
-	/* transform: translate(-50%, -50%) scale(0.8, 0.8); */
-	/* box-shadow: inset 0px 0px 3px 4px black; */
 	box-shadow: 0px 0px 0px 8px var(--buttonColor2),
 		0px 0px 0px 14px var(--buttonColor1),
 		inset 0px 0px 0px 0px var(--buttonColor2);
@@ -43,36 +46,20 @@
 	min-width: 300px;
 	min-height: 300px;
 	pointer-events: none;
-	/* transition: none; */
 	transition: background-size ease-in-out 0.5s,
 		background-position ease-in-out 0.5s;
 	background-repeat: no-repeat;
-	/* filter: blur(4px); */
-	/* z-index: -1; */
-	box-shadow: 0em 0em 0.1em 0.1em black;
 }
 
 .buttonEffect:active ~ .button {
-	transition: 0.1s ease-in-out all;
+	transition: box-shadow ease-out 0.1s, background-size ease-in-out 0.1s,
+		background-position ease-in-out 0.1s;
 	box-shadow: 0px 0px 0px 0px var(--buttonColor2),
-		0px 0px 0px 7px var(--buttonColor1),
+		0px 0px 0px 5px var(--buttonColor1),
 		inset 0px 0px 0px 5px var(--buttonColor2);
-	/* transform: translate(-50%, -50%s); */
-	/* transform: translate(-50%, -50%) scale(0.8, 0.8) !important; */
-	/* transition: 0; */
-	/* transform: scale(0.95); */
+	transform: scale(0.9, 0.9);
 }
 .buttonEffect:active::after {
-	/* z-index: -1; */
 	animation: none;
 	background-size: 0;
-}
-
-@keyframes buttonShrink {
-	0% {
-		transform: translate(-50%, -50%) !important;
-	}
-	100% {
-		transform: translate(-50%, -50%) scale(0.8, 0.8) !important;
-	}
 }
