--- a/interface.css
+++ b/interface.css
@@ -1,11 +1,15 @@
 :root {
-	--buttonColor1: #0c5b8371;
-	--buttonColor2: white;
-	--buttonColor3: #90a4ae8f;
-	--inputColor1: rgb(7, 58, 18);
+	--inputColor0: rgb(7, 58, 18);
+	--inputColor1: rgb(184, 193, 233);
 	--inputColor2: rgb(56, 6, 6);
 	--inputColor3: rgba(175, 119, 35, 0);
 	--inputColor4: rgb(13, 24, 128);
+	--borderColor: #dfe1e6;
+	--fontColor: #1f2667;
+
+	--bg1: #0c5b83;
+	--bg2: #1aa6ec;
+	--bg3: white;
 }
 
 html,
@@ -13,10 +17,23 @@ body {
 	font-size: 16px;
 	font-family: "Helvetica", "Arial", sans-serif;
 	text-align: center;
-	background-color: #f8faff;
+	background-color: #f5f6f7;
 	width: 100%;
 	height: 100%;
-	/* padding: 100px; */
+	margin: 0px;
+	padding: 0px;
+	color: var(--fontColor);
+}
+.headerWrap {
+	font-family: "Work Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial,
+		sans-serif;
+	width: 100%;
+	font-size: 24px;
+	padding: 16px 8px 20px;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-weight: 700;
 }
 h2 {
 	padding-bottom: 2em;
@@ -31,11 +48,85 @@ h2 {
 	width: 100%;
 	z-index: 1;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
+}
+.sideFiller {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+.sideFiller button {
+	padding: 16px 8px 20px;
+	font-size: 16px;
+	font-weight: 500;
+	cursor: pointer;
+}
+.codeOutputWrap {
+	width: 100%;
+	padding: 2em;
 }
 .buttonWrap {
 	z-index: 1;
 	position: relative;
-	width: 200px;
-	height: 200px;
+	width: 400px;
+	height: 400px;
+	max-width: 50%;
+}
+/* .progrBar {
+	width: 600px;
+	height: 40px;
+	margin-left: calc(50% - 300px);
+	background: linear-gradient(90deg, green, green);
+	background-repeat: no-repeat;
+ background-origin: ; 
+ background-size: 0% 100%; 
+} */
+.progrBarAnimated {
+	animation: progrBarAnim linear 0s forwards;
+}
+
+.codebox {
+	padding: 15px;
+	font-family: Courier, sans-serif;
+	font-size: 1em;
+	line-height: 1.3;
+	color: #fff;
+	background-color: #2c3e50;
+	-webkit-border-radius: 0px 0px 6px 6px;
+	-moz-border-radius: 0px 0px 6px 6px;
+	border-radius: 0px 0px 6px 6px;
+	margin-bottom: 10px;
+}
+
+code {
+	font-family: Courier, sans-serif;
+	font-size: 1em;
+	line-height: 1.3;
+}
+
+.codeheader {
+	padding: 5px 5px 5px 10px;
+	font-family: "Roboto", sans-serif;
+	font-size: 1.1em;
+	color: #fff;
+	-webkit-border-radius: 6px 6px 0px 0px;
+	-moz-border-radius: 6px 6px 0px 0px;
+	border-radius: 6px 6px 0px 0px;
+	user-select: none;
+	-ms-user-select: none; /* IE10+, Edge */
+	-moz-user-select: none; /* Mozilla */
+	-webkit-user-select: none; /* Safari */
+}
+
+#codeheader_html {
+	background-color: #3d9970;
+}
+#codeheader_css {
+	background-color: #e67e22;
+}
+#codeheader_php {
+	background-color: #85144b;
+}
+#codeheader_js {
+	background-color: #0074d9;
 }
