--- a/interface.css
+++ b/interface.css
@@ -7,26 +7,27 @@
 	--borderColor: #dfe1e6;
 	--fontColor: #1f2667;
 
-	--bg1: #0c5b83;
+	--bg1: #2c3e50;
 	--bg2: #1aa6ec;
 	--bg3: white;
+	--bg4: #e67e22;
+	--bg5: #f5f6f7;
 }
 
 html,
 body {
 	font-size: 16px;
-	font-family: "Helvetica", "Arial", sans-serif;
+	font-family: "Roboto", sans-serif;
 	text-align: center;
-	background-color: #f5f6f7;
 	width: 100%;
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
 	color: var(--fontColor);
+	overflow-x: hidden;
 }
 .headerWrap {
-	font-family: "Work Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial,
-		sans-serif;
+	font-family: "Roboto", sans-serif;
 	width: 100%;
 	font-size: 24px;
 	padding: 16px 8px 20px;
@@ -34,9 +35,12 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 700;
-}
-h2 {
-	padding-bottom: 2em;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: var(--bg4);
+	color: var(--bg5);
+	z-index: 12;
 }
 
 .mainWrap {
@@ -44,11 +48,17 @@ h2 {
 	height: 100%;
 }
 .buttonPreviewWrap {
-	position: relative;
 	width: 100%;
-	z-index: 1;
+	z-index: 11;
 	display: flex;
 	justify-content: space-around;
+	position: fixed;
+	top: 0;
+	left: 0;
+	/* height: 500px; */
+	background-color: var(--bg1);
+	pointer-events: none;
+	max-height: 50%;
 }
 .sideFiller {
 	display: flex;
@@ -60,10 +70,7 @@ h2 {
 	font-size: 16px;
 	font-weight: 500;
 	cursor: pointer;
-}
-.codeOutputWrap {
-	width: 100%;
-	padding: 2em;
+	pointer-events: all;
 }
 .buttonWrap {
 	z-index: 1;
@@ -72,43 +79,73 @@ h2 {
 	height: 400px;
 	max-width: 50%;
 }
+.settingsWrap {
+	z-index: 10;
+	margin-top: 500px;
+}
 /* .progrBar {
 	width: 600px;
 	height: 40px;
 	margin-left: calc(50% - 300px);
 	background: linear-gradient(90deg, green, green);
 	background-repeat: no-repeat;
- background-origin: ; 
- background-size: 0% 100%; 
+	background-origin: ; 
+	background-size: 0% 100%; 
 } */
 .progrBarAnimated {
 	animation: progrBarAnim linear 0s forwards;
 }
+.codeOutputWrap {
+	width: 100%;
+	padding: 2em;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-content: center;
+	align-items: center;
+	flex-wrap: nowrap;
+}
 
-.codebox {
+.codeBoxCont {
+	max-width: 80%;
+	width: 600px;
+	/* padding: 20%; */
+	position: relative;
+	margin-top: 2em;
+	overflow: hidden;
+}
+.codeBox {
 	padding: 15px;
 	font-family: Courier, sans-serif;
 	font-size: 1em;
 	line-height: 1.3;
-	color: #fff;
-	background-color: #2c3e50;
+	color: var(--bg3);
+	background-color: var(--bg1);
 	-webkit-border-radius: 0px 0px 6px 6px;
 	-moz-border-radius: 0px 0px 6px 6px;
 	border-radius: 0px 0px 6px 6px;
 	margin-bottom: 10px;
+	overflow: auto;
+	max-height: 300px;
+	margin: 0px;
+	padding-bottom: 55px;
 }
 
 code {
 	font-family: Courier, sans-serif;
 	font-size: 1em;
 	line-height: 1.3;
+	text-align: left;
+	overflow: auto;
 }
 
-.codeheader {
-	padding: 5px 5px 5px 10px;
+.codeHeader {
+	box-sizing: border-box;
+	padding: 10px 15px 10px 15px;
 	font-family: "Roboto", sans-serif;
 	font-size: 1.1em;
-	color: #fff;
+	color: var(--bg3);
 	-webkit-border-radius: 6px 6px 0px 0px;
 	-moz-border-radius: 6px 6px 0px 0px;
 	border-radius: 6px 6px 0px 0px;
@@ -116,17 +153,55 @@ code {
 	-ms-user-select: none; /* IE10+, Edge */
 	-moz-user-select: none; /* Mozilla */
 	-webkit-user-select: none; /* Safari */
+	background-color: var(--bg4);
+	text-align: left;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
 }
 
+.codeHeader .checkboxContainer input {
+	margin-left: 5px;
+	background-color: var(--buttonColor1);
+	box-shadow: inset 0em 0em 0em 1em var(--bg1),
+		inset 0em 0em 0em 0.75em var(--inputColor4);
+}
+.codeHeader .checkboxContainer .checkboxInput:checked {
+	box-shadow: inset 0em 0em 0em 0.3em var(--bg1),
+		inset 0em 0em 0em 0.75em var(--buttonColor2) !important;
+}
+.codeHeader .checkboxContainer .checkboxLabel {
+	font-size: 1.1em;
+	font-family: "Roboto", sans-serif;
+	text-align: left;
+	line-height: 21px;
+	color: var(--bg3);
+}
+.codeBoxCont button {
+	font-size: 1.1em;
+	width: 100%;
+	height: 50px;
+	cursor: pointer;
+	font-family: "Roboto", sans-serif;
+	background-color: var(--bg2);
+	color: var(--bg3);
+	bottom: calc(-1px * var(--scrollBarHeight));
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.codeHeader button:active {
+	transform: scale(0.95, 0.95);
+}
 #codeheader_html {
 	background-color: #3d9970;
 }
 #codeheader_css {
-	background-color: #e67e22;
+	background-color: #0074d9;
 }
 #codeheader_php {
 	background-color: #85144b;
 }
 #codeheader_js {
-	background-color: #0074d9;
 }
