--- a/Inputs.css
+++ b/Inputs.css
@@ -26,6 +26,14 @@
 		transparent 75%
 	);
 }
+
+.textField {
+	white-space: nowrap;
+	overflow-y: hidden;
+	overflow-x: scroll;
+	background-color: var(--borderColor);
+}
+
 .sliderContainer {
 	/* margin-top: 5px;
 	margin-bottom: 5px; */
@@ -45,7 +53,10 @@
 	margin-top: 0em;
 	border-radius: 0;
 	border: 1px solid var(--inputColor2);
-	background-color: rgba(0, 0, 0, 0);
+}
+
+.colorPickerButtonContainer button {
+	background-color: transparent;
 }
 
 .checkboxlabel {
@@ -95,13 +106,16 @@
 textArea {
 	resize: vertical;
 }
+select {
+	padding: 5px;
+}
 
 input[type="text"] {
-	outline: none;
+	outline: var(--borderColor);
+	border: 2px solid var(--borderColor);
 	box-sizing: border-box;
 	margin-left: 1px;
 	margin-top: 1px;
-	border-width: 0px;
 	border-radius: 0em;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -119,6 +133,7 @@ input[type="text"] {
 	z-index: 15;
 	pointer-events: none;
 	font-size: 0.75rem;
+	user-select: none;
 }
 input[type="range"] {
 	-webkit-appearance: none;
