--- a/styles/blabla.css
+++ b/styles/blabla.css
@@ -42,6 +42,7 @@
 	margin: 2px;
 	border-radius: 3px;
 	padding: 0.1em;
+	white-space: nowrap;
 }
 #blabla .codeBox {
 	padding: 5px 5px 5px 20px;
@@ -49,7 +50,7 @@
 	overflow: unset;
 	margin-left: 5px;
 	margin-right: 15px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-top: 1rem;
+	margin-bottom: 3rem;
 	border-radius: 4px;
 }
