--- a/styles/blabla.css
+++ b/styles/blabla.css
@@ -1,10 +1,3 @@
-#blabla {
-	/* display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: center; */
-}
-
 .blablaWrap {
 	display: flex;
 	flex-wrap: wrap;
@@ -44,7 +37,7 @@
 	padding: 0.1em;
 	white-space: nowrap;
 }
-#blabla .codeBox {
+.blabla .codeBox {
 	padding: 5px 5px 5px 20px;
 	max-height: unset;
 	overflow: unset;
