--- a/styles/interface.css
+++ b/styles/interface.css
@@ -33,7 +33,6 @@ body {
 	font-family: "Roboto", sans-serif;
 	width: 100%;
 	font-size: 24px;
-	padding: 16px 8px 20px;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -41,18 +40,26 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: var(--bg4);
-	color: var(--bg5);
-	z-index: 12;
+	background-color: var(--bg5);
+	color: var(--fontColor);
+	z-index: 9;
 	box-sizing: border-box;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: row;
+	min-height: 50px;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 .headerWrap a {
-	position: absolute;
+	/* position: absolute;
 	float: right;
-	height: 80%;
+	height: 80%; */
 	min-width: 50px;
-	right: 0.5em;
-	top: 10%;
+	/* right: 0.5em; */
+	/* top: 10%; */
 }
 .headerWrap img {
 	height: 100%;
@@ -60,12 +67,15 @@ body {
 
 .mainWrapper {
 	width: 100%;
+	position: absolute;
+	z-index: 11;
+	background-color: var(--bg5);
 	height: calc(100% - 500px);
-	margin-top: 500px;
 	overflow-y: scroll;
 }
 .buttonPreviewWrap {
 	width: 100%;
+	height: 400px;
 	max-height: calc(50% - 64px);
 	z-index: 11;
 	display: flex;
@@ -75,7 +85,8 @@ body {
 	left: 0;
 	background-color: var(--bg1);
 	pointer-events: none;
-	box-shadow: 0em 0.2em 10px 3px rgb(0 0 0 / 50%);
+	box-shadow: inset 0em -0.2em 10px 3px rgb(0 0 0 / 50%),
+		0em -0.2em 10px 3px rgb(0 0 0 / 50%);
 }
 .sideFiller {
 	display: flex;
@@ -90,11 +101,10 @@ body {
 	z-index: 1;
 	position: relative;
 	width: 400px;
-	height: 400px;
 	max-width: 50%;
 }
 .settingsWrap {
-	z-index: 10;
+	z-index: 11;
 	/* margin-top: 500px; */
 }
 /* .progrBar {
@@ -236,7 +246,8 @@ code {
 	transition: all 0.3s ease-out;
 	border: none;
 	padding: 10px 15px 10px 15px;
-	background-color: var(--bg2);
+	background-color: var(--bg5);
+	color: var(--fontColor);
 	min-height: 50px;
 	border-radius: 3px;
 	font-weight: 600;
